fixing gaps grid homepage

--- a/frontend/src/styles/Home.css
+++ b/frontend/src/styles/Home.css
@@ -1,8 +1,8 @@
 .main-wrapper {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 }
 
 .title-homepage {
@@ -11,4 +11,36 @@
     color: rgb(187, 195, 195);
     font-weight: 1000;
     font-size: 6em;
+}
+
+.grid-homepage {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5%;
+    row-gap: 40px;    
+}
+
+@media screen and (max-width: 1450px) {
+    .grid-homepage {
+        gap: 4%;
+        row-gap: 40px;     
+    }
+
+    .grid-homepage img {
+        width: 22%;
+        height: auto;
+    }
+}
+
+@media screen and (max-width: 934px) {
+    .grid-homepage {
+        gap: 4%; 
+        row-gap: 40px;     
+    }
+
+    .grid-homepage img {
+        width: 30.6%;
+        height: auto;
+    }
 }
